website/versioned_docs/version-0.9.6/tutorials/gpei_hartmann_service/index.mdx
---
title: '[RECOMMENDED] Service API'
sidebar_label: '[RECOMMENDED] Service API'
---

import LinkButtons from "@site/src/components/LinkButtons.jsx";
import CellOutput from "@site/src/components/CellOutput.jsx";
import {BokehFigure, PlotlyFigure} from "@site/src/components/Plotting.jsx";

<LinkButtons
  githubUrl="https://github.com/cristianlara/ax/blob/0.9.6/tutorials/gpei_hartmann_service/gpei_hartmann_service.ipynb"
  colabUrl="https://colab.research.google.com/github/cristianlara/ax/blob/0.9.6/tutorials/gpei_hartmann_service/gpei_hartmann_service.ipynb"
/>

# Service API Example on Hartmann6

The Ax Service API is designed to allow the user to control scheduling of trials and
data computation while having an easy to use interface with Ax.

The user iteratively:

- Queries Ax for candidates
- Schedules / deploys them however they choose
- Computes data and logs to Ax
- Repeat

```python
import sys
in_colab = 'google.colab' in sys.modules
if in_colab:
    %pip install ax-platform
```

```python
from ax.service.ax_client import AxClient, ObjectiveProperties
from ax.utils.measurement.synthetic_functions import hartmann6
from ax.utils.notebook.plotting import init_notebook_plotting, render
import plotly.io as pio

init_notebook_plotting()
if in_colab:
    pio.renderers.default = "colab"
```

<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.utils.notebook.plotting: Injecting Plotly library into cell. Do not overwrite or delete cell.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.utils.notebook.plotting: Please see
    (https://ax.dev/tutorials/visualizations.html#Fix-for-plots-that-are-not-rendering)
    if visualizations are not rendering.`
}
</CellOutput>

## 1. Initialize client

Create a client object to interface with Ax APIs. By default this runs locally without
storage.

```python
ax_client = AxClient()
```

<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.ax_client: Starting optimization with verbose logging. To disable logging, set the verbose_logging argument to False. Note that float values in the logs are rounded to 6 decimal points.`
}
</CellOutput>

## 2. Set up experiment

An experiment consists of a **search space** (parameters and parameter constraints) and
**optimization configuration** (objectives and outcome constraints). Note that:

- Only `parameters`, and `objectives` arguments are required.
- Dictionaries in `parameters` have the following required keys: "name" - parameter
  name, "type" - parameter type ("range", "choice" or "fixed"), "bounds" for range
  parameters, "values" for choice parameters, and "value" for fixed parameters.
- Dictionaries in `parameters` can optionally include "value_type" ("int", "float",
  "bool" or "str"), "log_scale" flag for range parameters, and "is_ordered" flag for
  choice parameters.
- `parameter_constraints` should be a list of strings of form "p1 >= p2" or "p1 + p2 \<=
  some_bound".
- `outcome_constraints` should be a list of strings of form "constrained_metric \<=
  some_bound".

```python
ax_client.create_experiment(
    name="hartmann_test_experiment",
    parameters=[
        {
            "name": "x1",
            "type": "range",
            "bounds": [0.0, 1.0],
            "value_type": "float",  # Optional, defaults to inference from type of "bounds".
            "log_scale": False,  # Optional, defaults to False.
        },
        {
            "name": "x2",
            "type": "range",
            "bounds": [0.0, 1.0],
        },
        {
            "name": "x3",
            "type": "range",
            "bounds": [0.0, 1.0],
        },
        {
            "name": "x4",
            "type": "range",
            "bounds": [0.0, 1.0],
        },
        {
            "name": "x5",
            "type": "range",
            "bounds": [0.0, 1.0],
        },
        {
            "name": "x6",
            "type": "range",
            "bounds": [0.0, 1.0],
        },
    ],
    objectives={"hartmann6": ObjectiveProperties(minimize=True)},
    parameter_constraints=["x1 + x2 <= 2.0"],  # Optional.
    outcome_constraints=["l2norm <= 1.25"],  # Optional.
)
```

<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter x2. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter x3. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter x4. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter x5. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter x6. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.service.utils.instantiation: Created search space: SearchSpace(parameters=[RangeParameter(name='x1', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x2', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x3', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x4', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x5', parameter_type=FLOAT, range=[0.0, 1.0]), RangeParameter(name='x6', parameter_type=FLOAT, range=[0.0, 1.0])], parameter_constraints=[ParameterConstraint(1.0*x1 + 1.0*x2 <= 2.0)]).`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.modelbridge.dispatch_utils: Using Models.BOTORCH_MODULAR since there is at least one ordered parameter and there are no unordered categorical parameters.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.modelbridge.dispatch_utils: Calculating the number of remaining initialization trials based on num_initialization_trials=None max_initialization_trials=None num_tunable_parameters=6 num_trials=None use_batch_trials=False`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.modelbridge.dispatch_utils: calculated num_initialization_trials=12`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.modelbridge.dispatch_utils: num_completed_initialization_trials=0 num_remaining_initialization_trials=12`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.modelbridge.dispatch_utils: verbose, disable_progbar, and jit_compile are not yet supported when using choose_generation_strategy with ModularBoTorchModel, dropping these arguments.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:16] ax.modelbridge.dispatch_utils: Using Bayesian Optimization generation strategy: GenerationStrategy(name='Sobol+BoTorch', steps=[Sobol for 12 trials, BoTorch for subsequent trials]). Iterations after 12 will take longer to generate due to model-fitting.`
}
</CellOutput>

## 3. Define how to evaluate trials

When using Ax a service, evaluation of parameterizations suggested by Ax is done either
locally or, more commonly, using an external scheduler. Below is a dummy evaluation
function that outputs data for two metrics "hartmann6" and "l2norm". Note that all
returned metrics correspond to either the `objectives` set on experiment creation or the
metric names mentioned in `outcome_constraints`.

```python
import numpy as np


def evaluate(parameterization):
    x = np.array([parameterization.get(f"x{i+1}") for i in range(6)])
    # In our case, standard error is 0, since we are computing a synthetic function.
    return {"hartmann6": (hartmann6(x), 0.0), "l2norm": (np.sqrt((x**2).sum()), 0.0)}
```

Result of the evaluation should generally be a mapping of the format:
`\{metric_name -> (mean, SEM)\}`. If there is only one metric in the experiment – the
objective – then evaluation function can return a single tuple of mean and SEM, in which
case Ax will assume that evaluation corresponds to the objective. _It can also return
only the mean as a float, in which case Ax will treat SEM as unknown and use a model
that can infer it._

For more details on evaluation function, refer to the "Trial Evaluation" section in the
Ax docs at [ax.dev](https://ax.dev/)

## 4. Run optimization loop

With the experiment set up, we can start the optimization loop.

At each step, the user queries the client for a new trial then submits the evaluation of
that trial back to the client.

Note that Ax auto-selects an appropriate optimization algorithm based on the search
space. For more advance use cases that require a specific optimization algorithm, pass a
`generation_strategy` argument into the `AxClient` constructor. Note that when Bayesian
Optimization is used, generating new trials may take a few minutes.

```python
for i in range(25):
    parameterization, trial_index = ax_client.get_next_trial()
    # Local evaluation here can be replaced with deployment to external system.
    ax_client.complete_trial(trial_index=trial_index, raw_data=evaluate(parameterization))
```

<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 0 with parameters {'x1': 0.153071, 'x2': 0.527557, 'x3': 0.389267, 'x4': 0.101972, 'x5': 0.230721, 'x6': 0.72288} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 0 with data: {'hartmann6': (-1.306389, 0.0), 'l2norm': (1.01954, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 1 with parameters {'x1': 0.550232, 'x2': 0.361861, 'x3': 0.912849, 'x4': 0.896951, 'x5': 0.500848, 'x6': 0.343655} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 1 with data: {'hartmann6': (-0.031438, 0.0), 'l2norm': (1.562198, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 2 with parameters {'x1': 0.756349, 'x2': 0.964395, 'x3': 0.233609, 'x4': 0.448135, 'x5': 0.778651, 'x6': 0.010256} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 2 with data: {'hartmann6': (-0.293083, 0.0), 'l2norm': (1.537505, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 3 with parameters {'x1': 0.415348, 'x2': 0.176964, 'x3': 0.694753, 'x4': 0.551707, 'x5': 0.486126, 'x6': 0.923208} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 3 with data: {'hartmann6': (-0.550851, 0.0), 'l2norm': (1.442055, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 4 with parameters {'x1': 0.28918, 'x2': 0.791496, 'x3': 0.863847, 'x4': 0.637525, 'x5': 0.317184, 'x6': 0.603778} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 4 with data: {'hartmann6': (-0.181671, 0.0), 'l2norm': (1.525751, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 5 with parameters {'x1': 0.882628, 'x2': 0.067148, 'x3': 0.34063, 'x4': 0.36207, 'x5': 0.914397, 'x6': 0.454686} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 5 with data: {'hartmann6': (-0.001877, 0.0), 'l2norm': (1.439974, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 6 with parameters {'x1': 0.67395, 'x2': 0.732191, 'x3': 0.520724, 'x4': 0.795273, 'x5': 0.67761, 'x6': 0.129878} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 6 with data: {'hartmann6': (-0.409175, 0.0), 'l2norm': (1.539464, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 7 with parameters {'x1': 0.029241, 'x2': 0.378418, 'x3': 0.059946, 'x4': 0.203411, 'x5': 0.08717, 'x6': 0.811659} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 7 with data: {'hartmann6': (-0.664824, 0.0), 'l2norm': (0.924885, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 8 with parameters {'x1': 0.118752, 'x2': 0.888864, 'x3': 0.615011, 'x4': 0.277306, 'x5': 0.60691, 'x6': 0.97283} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 8 with data: {'hartmann6': (-0.087945, 0.0), 'l2norm': (1.604386, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 9 with parameters {'x1': 0.709272, 'x2': 0.219292, 'x3': 0.091429, 'x4': 0.724515, 'x5': 0.126852, 'x6': 0.093692} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 9 with data: {'hartmann6': (-0.023022, 0.0), 'l2norm': (1.053236, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 10 with parameters {'x1': 0.972308, 'x2': 0.571837, 'x3': 0.769935, 'x4': 0.181147, 'x5': 0.402761, 'x6': 0.260342} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 10 with data: {'hartmann6': (-0.04802, 0.0), 'l2norm': (1.458763, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `/Users/cristianlara/Projects/Ax-1.0/ax/modelbridge/cross_validation.py:463: UserWarning:
Encountered exception in computing model fit quality: RandomModelBridge does not support prediction.
[INFO 09-29 16:57:17] ax.service.ax_client: Generated new trial 11 with parameters {'x1': 0.324667, 'x2': 0.288283, 'x3': 0.308792, 'x4': 0.819762, 'x5': 0.860295, 'x6': 0.673138} using model Sobol.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:17] ax.service.ax_client: Completed trial 11 with data: {'hartmann6': (-0.02347, 0.0), 'l2norm': (1.465981, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:20] ax.service.ax_client: Generated new trial 12 with parameters {'x1': 0.150641, 'x2': 0.313917, 'x3': 0.413272, 'x4': 0.057123, 'x5': 0.217892, 'x6': 0.812328} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:20] ax.service.ax_client: Completed trial 12 with data: {'hartmann6': (-1.407953, 0.0), 'l2norm': (1.001322, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:24] ax.service.ax_client: Generated new trial 13 with parameters {'x1': 0.0, 'x2': 0.083117, 'x3': 0.416058, 'x4': 0.609, 'x5': 0.224715, 'x6': 0.937201} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:24] ax.service.ax_client: Completed trial 13 with data: {'hartmann6': (-0.494109, 0.0), 'l2norm': (1.216444, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:27] ax.service.ax_client: Generated new trial 14 with parameters {'x1': 0.280153, 'x2': 0.084903, 'x3': 0.423798, 'x4': 0.0, 'x5': 0.254748, 'x6': 0.882275} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:27] ax.service.ax_client: Completed trial 14 with data: {'hartmann6': (-1.01778, 0.0), 'l2norm': (1.052903, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:31] ax.service.ax_client: Generated new trial 15 with parameters {'x1': 0.125586, 'x2': 0.401714, 'x3': 0.496758, 'x4': 0.0, 'x5': 0.154412, 'x6': 0.794533} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:31] ax.service.ax_client: Completed trial 15 with data: {'hartmann6': (-0.935041, 0.0), 'l2norm': (1.038769, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:35] ax.service.ax_client: Generated new trial 16 with parameters {'x1': 0.037922, 'x2': 0.332036, 'x3': 0.233085, 'x4': 0.113017, 'x5': 0.231807, 'x6': 0.81388} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:35] ax.service.ax_client: Completed trial 16 with data: {'hartmann6': (-1.34966, 0.0), 'l2norm': (0.946004, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:40] ax.service.ax_client: Generated new trial 17 with parameters {'x1': 0.217877, 'x2': 0.0, 'x3': 0.28475, 'x4': 0.07931, 'x5': 0.205823, 'x6': 1.0} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:40] ax.service.ax_client: Completed trial 17 with data: {'hartmann6': (-0.649063, 0.0), 'l2norm': (1.084991, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:46] ax.service.ax_client: Generated new trial 18 with parameters {'x1': 0.333294, 'x2': 0.315926, 'x3': 0.38454, 'x4': 0.0, 'x5': 0.230724, 'x6': 0.718245} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:46] ax.service.ax_client: Completed trial 18 with data: {'hartmann6': (-1.208567, 0.0), 'l2norm': (0.963262, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:52] ax.service.ax_client: Generated new trial 19 with parameters {'x1': 0.0, 'x2': 0.681865, 'x3': 0.541129, 'x4': 0.0, 'x5': 0.222552, 'x6': 0.803556} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:52] ax.service.ax_client: Completed trial 19 with data: {'hartmann6': (-0.503675, 0.0), 'l2norm': (1.205401, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:56] ax.service.ax_client: Generated new trial 20 with parameters {'x1': 0.072429, 'x2': 0.32688, 'x3': 0.3496, 'x4': 0.144298, 'x5': 0.232258, 'x6': 0.798205} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:57:56] ax.service.ax_client: Completed trial 20 with data: {'hartmann6': (-1.759588, 0.0), 'l2norm': (0.972736, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:00] ax.service.ax_client: Generated new trial 21 with parameters {'x1': 0.032325, 'x2': 0.193541, 'x3': 0.368322, 'x4': 0.228741, 'x5': 0.222972, 'x6': 0.776981} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:00] ax.service.ax_client: Completed trial 21 with data: {'hartmann6': (-2.227752, 0.0), 'l2norm': (0.938031, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:04] ax.service.ax_client: Generated new trial 22 with parameters {'x1': 0.0, 'x2': 0.036509, 'x3': 0.420134, 'x4': 0.260533, 'x5': 0.242153, 'x6': 0.740498} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:04] ax.service.ax_client: Completed trial 22 with data: {'hartmann6': (-2.370043, 0.0), 'l2norm': (0.923417, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:10] ax.service.ax_client: Generated new trial 23 with parameters {'x1': 0.396217, 'x2': 0.039192, 'x3': 0.414575, 'x4': 0.284219, 'x5': 0.123238, 'x6': 0.746905} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:10] ax.service.ax_client: Completed trial 23 with data: {'hartmann6': (-1.5316, 0.0), 'l2norm': (0.992085, 0.0)}.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:14] ax.service.ax_client: Generated new trial 24 with parameters {'x1': 0.0, 'x2': 0.150789, 'x3': 0.449015, 'x4': 0.249784, 'x5': 0.307963, 'x6': 0.693384} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:14] ax.service.ax_client: Completed trial 24 with data: {'hartmann6': (-2.786172, 0.0), 'l2norm': (0.928637, 0.0)}.`
}
</CellOutput>

### How many trials can run in parallel?

By default, Ax restricts number of trials that can run in parallel for some optimization
stages, in order to improve the optimization performance and reduce the number of trials
that the optimization will require. To check the maximum parallelism for each
optimization stage:

```python
ax_client.get_max_parallelism()
```

<CellOutput>
{
  `[(12, 12), (-1, 3)]`
}
</CellOutput>

The output of this function is a list of tuples of form (number of trials, max
parallelism), so the example above means "the max parallelism is 12 for the first 12
trials and 3 for all subsequent trials." This is because the first 12 trials are
produced quasi-randomly and can all be evaluated at once, and subsequent trials are
produced via Bayesian optimization, which converges on optimal point in fewer trials
when parallelism is limited. `MaxParallelismReachedException` indicates that the
parallelism limit has been reached –– refer to the 'Service API Exceptions Meaning and
Handling' section at the end of the tutorial for handling.

### How to view all existing trials during optimization?

```python
ax_client.generation_strategy.trials_as_df
```

<CellOutput>
{
  `[INFO 09-29 16:58:15] ax.modelbridge.generation_strategy: Note that parameter values in dataframe are rounded to 2 decimal points; the values in the dataframe are thus not the exact ones suggested by Ax in trials.`
}
</CellOutput>



|    | Generation Step    | Generation Model(s)   |   Trial Index | Trial Status   | Arm Parameterizations                             |
|---:|:-------------------|:----------------------|--------------:|:---------------|:--------------------------------------------------|
|  0 | [GenerationStep_0] | [Sobol]               |             0 | COMPLETED      | \{'0_0': \{'x1': 0.15, 'x2': 0.53, 'x3': 0.39, '... |
|  1 | [GenerationStep_0] | [Sobol]               |             1 | COMPLETED      | \{'1_0': \{'x1': 0.55, 'x2': 0.36, 'x3': 0.91, '... |
|  2 | [GenerationStep_0] | [Sobol]               |             2 | COMPLETED      | \{'2_0': \{'x1': 0.76, 'x2': 0.96, 'x3': 0.23, '... |
|  3 | [GenerationStep_0] | [Sobol]               |             3 | COMPLETED      | \{'3_0': \{'x1': 0.42, 'x2': 0.18, 'x3': 0.69, '... |
|  4 | [GenerationStep_0] | [Sobol]               |             4 | COMPLETED      | \{'4_0': \{'x1': 0.29, 'x2': 0.79, 'x3': 0.86, '... |
|  5 | [GenerationStep_0] | [Sobol]               |             5 | COMPLETED      | \{'5_0': \{'x1': 0.88, 'x2': 0.07, 'x3': 0.34, '... |
|  6 | [GenerationStep_0] | [Sobol]               |             6 | COMPLETED      | \{'6_0': \{'x1': 0.67, 'x2': 0.73, 'x3': 0.52, '... |
|  7 | [GenerationStep_0] | [Sobol]               |             7 | COMPLETED      | \{'7_0': \{'x1': 0.03, 'x2': 0.38, 'x3': 0.06, '... |
|  8 | [GenerationStep_0] | [Sobol]               |             8 | COMPLETED      | \{'8_0': \{'x1': 0.12, 'x2': 0.89, 'x3': 0.62, '... |
|  9 | [GenerationStep_0] | [Sobol]               |             9 | COMPLETED      | \{'9_0': \{'x1': 0.71, 'x2': 0.22, 'x3': 0.09, '... |
| 10 | [GenerationStep_0] | [Sobol]               |            10 | COMPLETED      | \{'10_0': \{'x1': 0.97, 'x2': 0.57, 'x3': 0.77, ... |
| 11 | [GenerationStep_0] | [Sobol]               |            11 | COMPLETED      | \{'11_0': \{'x1': 0.32, 'x2': 0.29, 'x3': 0.31, ... |
| 12 | [GenerationStep_1] | [BoTorch]             |            12 | COMPLETED      | \{'12_0': \{'x1': 0.15, 'x2': 0.31, 'x3': 0.41, ... |
| 13 | [GenerationStep_1] | [BoTorch]             |            13 | COMPLETED      | \{'13_0': \{'x1': 0.0, 'x2': 0.08, 'x3': 0.42, '... |
| 14 | [GenerationStep_1] | [BoTorch]             |            14 | COMPLETED      | \{'14_0': \{'x1': 0.28, 'x2': 0.08, 'x3': 0.42, ... |
| 15 | [GenerationStep_1] | [BoTorch]             |            15 | COMPLETED      | \{'15_0': \{'x1': 0.13, 'x2': 0.4, 'x3': 0.5, 'x... |
| 16 | [GenerationStep_1] | [BoTorch]             |            16 | COMPLETED      | \{'16_0': \{'x1': 0.04, 'x2': 0.33, 'x3': 0.23, ... |
| 17 | [GenerationStep_1] | [BoTorch]             |            17 | COMPLETED      | \{'17_0': \{'x1': 0.22, 'x2': 0.0, 'x3': 0.28, '... |
| 18 | [GenerationStep_1] | [BoTorch]             |            18 | COMPLETED      | \{'18_0': \{'x1': 0.33, 'x2': 0.32, 'x3': 0.38, ... |
| 19 | [GenerationStep_1] | [BoTorch]             |            19 | COMPLETED      | \{'19_0': \{'x1': 0.0, 'x2': 0.68, 'x3': 0.54, '... |
| 20 | [GenerationStep_1] | [BoTorch]             |            20 | COMPLETED      | \{'20_0': \{'x1': 0.07, 'x2': 0.33, 'x3': 0.35, ... |
| 21 | [GenerationStep_1] | [BoTorch]             |            21 | COMPLETED      | \{'21_0': \{'x1': 0.03, 'x2': 0.19, 'x3': 0.37, ... |
| 22 | [GenerationStep_1] | [BoTorch]             |            22 | COMPLETED      | \{'22_0': \{'x1': 0.0, 'x2': 0.04, 'x3': 0.42, '... |
| 23 | [GenerationStep_1] | [BoTorch]             |            23 | COMPLETED      | \{'23_0': \{'x1': 0.4, 'x2': 0.04, 'x3': 0.41, '... |
| 24 | [GenerationStep_1] | [BoTorch]             |            24 | COMPLETED      | \{'24_0': \{'x1': 0.0, 'x2': 0.15, 'x3': 0.45, '... |

## 5. Retrieve best parameters

Once it's complete, we can access the best parameters found, as well as the
corresponding metric values.

```python
best_parameters, values = ax_client.get_best_parameters()
best_parameters
```

<CellOutput>
{
  `{'x1': 2.377190650665489e-16,
 'x2': 0.15078873937241558,
 'x3': 0.4490146600613049,
 'x4': 0.24978372446784,
 'x5': 0.3079634202053345,
 'x6': 0.6933838786685046}`
}
</CellOutput>

```python
means, covariances = values
means
```

<CellOutput>
{
  `{'l2norm': 0.9286373327291121, 'hartmann6': -2.786165442089028}`
}
</CellOutput>

For comparison, Hartmann6 minimum:

```python
hartmann6.fmin
```

<CellOutput>
{
  `-3.32237`
}
</CellOutput>

## 6. Plot the response surface and optimization trace

Here we arbitrarily select "x1" and "x2" as the two parameters to plot for both metrics,
"hartmann6" and "l2norm".

```python
render(ax_client.get_contour_plot())
```

<CellOutput>
{
  `[INFO 09-29 16:58:16] ax.service.ax_client: Retrieving contour plot with parameter 'x1' on X-axis and 'x2' on Y-axis, for metric 'hartmann6'. Remaining parameters are affixed to the middle of their range.`
}
</CellOutput>


<PlotlyFigure data={require('./assets/plot_data/52b40b5b-aa18-45b1-80ac-b1ab1df07df3.json')} />

We can also retrieve a contour plot for the other metric, "l2norm" –– say, we are
interested in seeing the response surface for parameters "x3" and "x4" for this one.

```python
render(ax_client.get_contour_plot(param_x="x3", param_y="x4", metric_name="l2norm"))
```

<CellOutput>
{
  `[INFO 09-29 16:58:17] ax.service.ax_client: Retrieving contour plot with parameter 'x3' on X-axis and 'x4' on Y-axis, for metric 'l2norm'. Remaining parameters are affixed to the middle of their range.`
}
</CellOutput>


<PlotlyFigure data={require('./assets/plot_data/f4792cd7-d696-4052-897f-174418347db8.json')} />

Here we plot the optimization trace, showing the progression of finding the point with
the optimal objective:

```python
render(
    ax_client.get_optimization_trace(objective_optimum=hartmann6.fmin)
)  # Objective_optimum is optional.
```

<PlotlyFigure data={require('./assets/plot_data/4eca2327-c7de-44a9-9dab-89ce18698174.json')} />

## 7. Save / reload optimization to JSON / SQL

We can serialize the state of optimization to JSON and save it to a `.json` file or save
it to the SQL backend. For the former:

```python
ax_client.save_to_json_file()  # For custom filepath, pass `filepath` argument.
```

<CellOutput>
{
  `[INFO 09-29 16:58:18] ax.service.ax_client: Saved JSON-serialized state of optimization to ax_client_snapshot.json.`
}
</CellOutput>

```python
restored_ax_client = (
    AxClient.load_from_json_file()
)  # For custom filepath, pass `filepath` argument.
```

<CellOutput>
{
  `[INFO 09-29 16:58:18] ax.service.ax_client: Starting optimization with verbose logging. To disable logging, set the verbose_logging argument to False. Note that float values in the logs are rounded to 6 decimal points.`
}
</CellOutput>

To store state of optimization to an SQL backend, first follow
[setup instructions](https://ax.dev/docs/storage.html#sql) on Ax website.

Having set up the SQL backend, pass `DBSettings` to `AxClient` on instantiation (note
that `SQLAlchemy` dependency will have to be installed – for installation, refer to
[optional dependencies](https://ax.dev/docs/installation.html#optional-dependencies) on
Ax website):

```python
from ax.storage.sqa_store.structs import DBSettings

# URL is of the form "dialect+driver://username:password@host:port/database".
db_settings = DBSettings(url="sqlite:///foo.db")
# Instead of URL, can provide a `creator function`; can specify custom encoders/decoders if necessary.
new_ax = AxClient(db_settings=db_settings)
```

<CellOutput>
{
  `[INFO 09-29 16:58:18] ax.service.ax_client: Starting optimization with verbose logging. To disable logging, set the verbose_logging argument to False. Note that float values in the logs are rounded to 6 decimal points.`
}
</CellOutput>

When valid `DBSettings` are passed into `AxClient`, a unique experiment name is a
required argument (`name`) to `ax_client.create_experiment`. The **state of the
optimization is auto-saved** any time it changes (i.e. a new trial is added or
completed, etc).

To reload an optimization state later, instantiate `AxClient` with the same `DBSettings`
and use `ax_client.load_experiment_from_database(experiment_name="my_experiment")`.

# Special Cases

**Evaluation failure**: should any optimization iterations fail during evaluation,
`log_trial_failure` will ensure that the same trial is not proposed again.

```python
_, trial_index = ax_client.get_next_trial()
ax_client.log_trial_failure(trial_index=trial_index)
```

<CellOutput>
{
  `[INFO 09-29 16:58:24] ax.service.ax_client: Generated new trial 25 with parameters {'x1': 0.0, 'x2': 0.189512, 'x3': 0.534758, 'x4': 0.251695, 'x5': 0.367481, 'x6': 0.608447} using model BoTorch.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:24] ax.service.ax_client: Registered failure of trial 25.`
}
</CellOutput>

**Adding custom trials**: should there be need to evaluate a specific parameterization,
`attach_trial` will add it to the experiment.

```python
ax_client.attach_trial(
    parameters={"x1": 0.9, "x2": 0.9, "x3": 0.9, "x4": 0.9, "x5": 0.9, "x6": 0.9}
)
```

<CellOutput>
{
  `[INFO 09-29 16:58:24] ax.core.experiment: Attached custom parameterizations [{'x1': 0.9, 'x2': 0.9, 'x3': 0.9, 'x4': 0.9, 'x5': 0.9, 'x6': 0.9}] as trial 26.`
}
</CellOutput>


<CellOutput>
{
  `({'x1': 0.9, 'x2': 0.9, 'x3': 0.9, 'x4': 0.9, 'x5': 0.9, 'x6': 0.9}, 26)`
}
</CellOutput>

**Need to run many trials in parallel**: for optimal results and optimization
efficiency, we strongly recommend sequential optimization (generating a few trials, then
waiting for them to be completed with evaluation data). However, if your use case needs
to dispatch many trials in parallel before they are updated with data and you are
running into the *"All trials for current model have been generated, but not enough data
has been observed to fit next model"* error, instantiate `AxClient` as
`AxClient(enforce_sequential_optimization=False)`.

```python

```

**Nonlinear parameter constraints and/or constraints on non-Range parameters:** Ax
parameter constraints can currently only support linear inequalities
([discussion](https://github.com/facebook/Ax/issues/153)). Users may be able to simulate
this functionality, however, by substituting the following `evaluate` function for that
defined in section 3 above.

```python
def evaluate(parameterization):
    x = np.array([parameterization.get(f"x{i+1}") for i in range(6)])
    # First calculate the nonlinear quantity to be constrained.
    l2norm = np.sqrt((x**2).sum())
    # Then define a constraint consistent with an outcome constraint on this experiment.
    if l2norm > 1.25:
        return {"l2norm": (l2norm, 0.0)}
    return {"hartmann6": (hartmann6(x), 0.0), "l2norm": (l2norm, 0.0)}
```

For this to work, the constraint quantity (`l2norm` in this case) should have a
corresponding outcome constraint on the experiment. See the outcome_constraint arg to
ax_client.create_experiment in section 2 above for how to specify outcome constraints.

This setup accomplishes the following:

1. Allows computation of an arbitrarily complex constraint value.
1. Skips objective computation when the constraint is violated, useful when the
   objective is relatively expensive to compute.
1. Constraint metric values are returned even when there is a violation. This helps the
   model understand + avoid constraint violations.

# Service API Exceptions Meaning and Handling

[**`DataRequiredError`**](https://ax.dev/api/exceptions.html#ax.exceptions.core.DataRequiredError):
Ax generation strategy needs to be updated with more data to proceed to the next
optimization model. When the optimization moves from initialization stage to the
Bayesian optimization stage, the underlying BayesOpt model needs sufficient data to
train. For optimal results and optimization efficiency (finding the optimal point in the
least number of trials), we recommend sequential optimization (generating a few trials,
then waiting for them to be completed with evaluation data). Therefore, the correct way
to handle this exception is to wait until more trial evaluations complete and log their
data via `ax_client.complete_trial(...)`.

However, if there is strong need to generate more trials before more data is available,
instantiate `AxClient` as `AxClient(enforce_sequential_optimization=False)`. With this
setting, as many trials will be generated from the initialization stage as requested,
and the optimization will move to the BayesOpt stage whenever enough trials are
completed.

[**`MaxParallelismReachedException`**](https://ax.dev/api/modelbridge.html#ax.modelbridge.generation_strategy.MaxParallelismReachedException):
generation strategy restricts the number of trials that can be ran simultaneously (to
encourage sequential optimization), and the parallelism limit has been reached. The
correct way to handle this exception is the same as `DataRequiredError` – to wait until
more trial evluations complete and log their data via `ax_client.complete_trial(...)`.

In some cases higher parallelism is important, so
`enforce_sequential_optimization=False` kwarg to AxClient allows to suppress limiting of
parallelism. It's also possible to override the default parallelism setting for all
stages of the optimization by passing `choose_generation_strategy_kwargs` to
`ax_client.create_experiment`:

```python
ax_client = AxClient()
ax_client.create_experiment(
    parameters=[
        {"name": "x", "type": "range", "bounds": [-5.0, 10.0]},
        {"name": "y", "type": "range", "bounds": [0.0, 15.0]},
    ],
    # Sets max parallelism to 10 for all steps of the generation strategy.
    choose_generation_strategy_kwargs={"max_parallelism_override": 10},
)
```

<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.service.ax_client: Starting optimization with verbose logging. To disable logging, set the verbose_logging argument to False. Note that float values in the logs are rounded to 6 decimal points.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter x. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.service.utils.instantiation: Inferred value type of ParameterType.FLOAT for parameter y. If that is not the expected value type, you can explicitly specify 'value_type' ('int', 'float', 'bool' or 'str') in parameter dict.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.service.utils.instantiation: Created search space: SearchSpace(parameters=[RangeParameter(name='x', parameter_type=FLOAT, range=[-5.0, 10.0]), RangeParameter(name='y', parameter_type=FLOAT, range=[0.0, 15.0])], parameter_constraints=[]).`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.modelbridge.dispatch_utils: Using Models.BOTORCH_MODULAR since there is at least one ordered parameter and there are no unordered categorical parameters.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.modelbridge.dispatch_utils: Calculating the number of remaining initialization trials based on num_initialization_trials=None max_initialization_trials=None num_tunable_parameters=2 num_trials=None use_batch_trials=False`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.modelbridge.dispatch_utils: calculated num_initialization_trials=5`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.modelbridge.dispatch_utils: num_completed_initialization_trials=0 num_remaining_initialization_trials=5`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.modelbridge.dispatch_utils: verbose, disable_progbar, and jit_compile are not yet supported when using choose_generation_strategy with ModularBoTorchModel, dropping these arguments.`
}
</CellOutput>


<CellOutput>
{
  `[INFO 09-29 16:58:25] ax.modelbridge.dispatch_utils: Using Bayesian Optimization generation strategy: GenerationStrategy(name='Sobol+BoTorch', steps=[Sobol for 5 trials, BoTorch for subsequent trials]). Iterations after 5 will take longer to generate due to model-fitting.`
}
</CellOutput>

```python
ax_client.get_max_parallelism()  # Max parallelism is now 10 for all stages of the optimization.
```

<CellOutput>
{
  `[(5, 10), (-1, 10)]`
}
</CellOutput>

